cmake_minimum_required(VERSION 3.21)
project(1_HelloWorld)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_HelloWorld main.cpp cppPrimerPlus_6th_edition/2_getinfo.cpp cppPrimerPlus_6th_edition/3_MathFunctionCalling.cpp cppPrimerPlus_6th_edition/4_Chap2_Practice.cpp cppPrimerPlus_6th_edition/5_Chap3.cpp cppPrimerPlus_6th_edition/6_Chap3_Practice.cpp cppPrimerPlus_6th_edition/7_Chap4.cpp cppPrimerPlus_6th_edition/8_Chap4_Practice.cpp cppPrimerPlus_6th_edition/9_Chap5.cpp cppPrimerPlus_6th_edition/10_Chap5_Practice.cpp cppPrimerPlus_6th_edition/11_Chap6.cpp cppPrimerPlus_6th_edition/12_Chap6_Practice.cpp cppPrimerPlus_6th_edition/13_Chap7_Function.cpp cppPrimerPlus_6th_edition/14_Chap7_Practice.cpp cppPrimerPlus_6th_edition/15_Chap8_InlineFunc.cpp CS106L_1_Intro_to_Cpp.cpp)
include_directories(/Users/moynstain/CLionProjects/1.HelloWorld)

add_executable(2_getinfo cppPrimerPlus_6th_edition/2_getinfo.cpp)
add_executable(3_MathFunctionCalling cppPrimerPlus_6th_edition/3_MathFunctionCalling.cpp)
add_executable(4_Chap2_Practice cppPrimerPlus_6th_edition/4_Chap2_Practice.cpp)
add_executable(5_Chap3 cppPrimerPlus_6th_edition/5_Chap3.cpp)
add_executable(6_Chap3_Practice cppPrimerPlus_6th_edition/6_Chap3_Practice.cpp)
add_executable(7_Chap4 cppPrimerPlus_6th_edition/7_Chap4.cpp)
add_executable(8_Chap4_Practice cppPrimerPlus_6th_edition/8_Chap4_Practice.cpp)
add_executable(9_Chap5 cppPrimerPlus_6th_edition/9_Chap5.cpp)
add_executable(10_Chap5_Practice cppPrimerPlus_6th_edition/10_Chap5_Practice.cpp DirectoryTest/glove_test_1.cpp)
add_executable(11_Chap6 cppPrimerPlus_6th_edition/11_Chap6.cpp)
add_executable(12_Chap6_Practice cppPrimerPlus_6th_edition/12_Chap6_Practice.cpp)
add_executable(13_Chap7_Function cppPrimerPlus_6th_edition/13_Chap7_Function.cpp)
add_executable(14_Chap7_Practice cppPrimerPlus_6th_edition/14_Chap7_Practice.cpp)
add_executable(15_Chap8_InlineFunc cppPrimerPlus_6th_edition/15_Chap8_InlineFunc.cpp)
add_executable(glove_test_1 DirectoryTest/glove_test_1.cpp)
add_executable(CS106L_1_Intro_to_Cpp CS106L_1_Intro_to_Cpp.cpp)
add_executable(quadratic CS106L_Code_Example/2_typesStructs/quadratic.cpp)
add_executable(quadratic_soln CS106L_Code_Example/2_typesStructs/quadratic_soln.cpp)
add_executable(istreams CS106L_Code_Example/3_streams/Istreams/istreams.cpp)
add_executable(istreams_soln CS106L_Code_Example/3_streams/Istreams/istreams_soln.cpp)
# target_include_directories(istreams_soln /Users/moynstain/CLionProjects/1.HelloWorld)
add_executable(r_spaghetti CS106L_Code_Example/3pt5_initsRefs/References/r_spaghetti.cpp)
add_executable(vector_time_trials CS106L_Code_Example/4_containers/vector_time_trials.cpp)
add_executable(vector_list_deque CS106L_Code_Example/4_containers/vector_list_deque.cpp)
add_executable(chap1_myfirst cppPrimerPlus_6th_edition/Chap1/chap1_myfirst.cpp)
add_executable(chap1_carrots cppPrimerPlus_6th_edition/Chap1/chap1_carrots.cpp)
add_executable(chap1_getinfo cppPrimerPlus_6th_edition/Chap1/chap1_getinfo.cpp)
add_executable(chap1_sqrt cppPrimerPlus_6th_edition/Chap1/chap1_sqrt.cpp)
add_executable(chap1_ourfunc cppPrimerPlus_6th_edition/Chap1/chap1_ourfunc.cpp)
add_executable(chap1_convert cppPrimerPlus_6th_edition/Chap1/chap1_convert.cpp)
add_executable(chap3_hexoct cppPrimerPlus_6th_edition/Chap3/chap3_hexoct.cpp)
add_executable(chap3_chartype cppPrimerPlus_6th_edition/Chap3/chap3_chartype.cpp)
add_executable(chap3_bondini cppPrimerPlus_6th_edition/Chap3/chap3_bondini.cpp)
add_executable(chap3_floatnum cppPrimerPlus_6th_edition/Chap3/chap3_floatnum.cpp)
add_executable(chap4_structur cppPrimerPlus_6th_edition/Chap4/chap4_structur.cpp)
add_executable(chap4_address cppPrimerPlus_6th_edition/Chap4/chap4_address.cpp)
add_executable(chap4_pointer cppPrimerPlus_6th_edition/Chap4/chap4_pointer.cpp)
add_executable(chap4_new cppPrimerPlus_6th_edition/Chap4/chap4_new.cpp)
add_executable(chap4_ptrstr cppPrimerPlus_6th_edition/Chap4/chap4_ptrstr.cpp)
add_executable(chap4_delete cppPrimerPlus_6th_edition/Chap4/chap4_delete.cpp)
add_executable(chap5_nested cppPrimerPlus_6th_edition/Chap5/chap5_nested.cpp)
add_executable(chap6_if cppPrimerPlus_6th_edition/Chap6/chap6_if.cpp)
add_executable(chap6_ifelse cppPrimerPlus_6th_edition/Chap6/chap6_ifelse.cpp)
add_executable(chap6_not cppPrimerPlus_6th_edition/Chap6/chap6_not.cpp)